--- a/CliClient/locales/fr_FR.po
+++ b/CliClient/locales/fr_FR.po
@@ -35,10 +35,10 @@ msgstr "Veuillez d'abord sélectionner un carnet."
 msgid "Set a todo as completed / not completed"
 msgstr "Tâches non-complétées et récentes"
 
-msgid "Toggle console between maximized/minimized/hidden/visible."
+msgid "[t]oggle [c]onsole between maximized/minimized/hidden/visible."
 msgstr ""
 
-msgid "Toggle note metadata."
+msgid "[t]oggle note [m]etadata."
 msgstr ""
 
 msgid "Enter command line mode"
@@ -56,16 +56,24 @@ msgid "Exit the application."
 msgstr "Quitter le logiciel."
 
 #, fuzzy
-msgid "Create a new note"
+msgid "Create a [n]ew [n]ote"
 msgstr "Créer une note."
 
 #, fuzzy
-msgid "Create a new todo"
+msgid "Create a [n]ew [t]odo"
 msgstr "Créer une nouvelle tâche."
 
 #, fuzzy
-msgid "Create a new notebook"
+msgid "Create a [n]ew [n]otebook"
 msgstr "Créer un carnet."
+
+#, fuzzy
+msgid "Copy the note to a notebook."
+msgstr "Impossible de copier la note dans le carnet \"%s\""
+
+#, fuzzy
+msgid "Move the note to a notebook."
+msgstr "Impossible de déplacer la note vers le carnet \"%s\""
 
 msgid "Press Ctrl+D or type \"exit\" to exit the application"
 msgstr ""
@@ -406,7 +414,7 @@ msgid "Creates a new todo."
 msgstr "Créer une nouvelle tâche."
 
 #, fuzzy
-msgid "Moves the notes matching <note-pattern> to [notebook]."
+msgid "Moves the notes matching <note> to [notebook]."
 msgstr "Supprime les objets correspondants à <motif>."
 
 #, fuzzy
