--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -15,10 +15,10 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Give focus to next widget"
+msgid "Give focus to next pane"
 msgstr ""
 
-msgid "Give focus to previous widget"
+msgid "Give focus to previous pane"
 msgstr ""
 
 msgid "Enter command line mode"
@@ -236,7 +236,9 @@ msgstr ""
 msgid "Note has been saved."
 msgstr ""
 
-msgid "Exports Joplin data to the given target."
+msgid ""
+"Exports Joplin data to the given directory. By default, it will export the "
+"complete database including notebooks, notes, tags and resources."
 msgstr ""
 
 msgid "Exports only the given note."
@@ -258,6 +260,12 @@ msgid "Type `help [command]` for more information about a command."
 msgstr ""
 
 msgid "The possible commands are:"
+msgstr ""
+
+msgid ""
+"In any command, a note or notebook can be refered to by title or ID, or "
+"using the shortcuts `$n` or `$b` for, respectively, the currently selected "
+"note or notebook. `$c` can be used to refer to the currently selected item."
 msgstr ""
 
 msgid "To move from one widget to another, press Tab or Shift+Tab."
