--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -42,7 +42,7 @@ msgstr ""
 msgid "Please select the note or notebook to be deleted first."
 msgstr ""
 
-msgid "Set a todo as completed / not completed"
+msgid "Set a to-do as completed / not completed"
 msgstr ""
 
 msgid "[t]oggle [c]onsole between maximized/minimized/hidden/visible."
@@ -209,11 +209,11 @@ msgid ""
 "specified the note is duplicated in the current notebook."
 msgstr ""
 
-msgid "Marks a todo as done."
+msgid "Marks a to-do as done."
 msgstr ""
 
 #, javascript-format
-msgid "Note is not a todo: \"%s\""
+msgid "Note is not a to-do: \"%s\""
 msgstr ""
 
 msgid "Edit note."
@@ -352,8 +352,8 @@ msgstr ""
 
 msgid ""
 "Displays only the items of the specific type(s). Can be `n` for notes, `t` "
-"for todos, or `nt` for notes and todos (eg. `-tt` would display only the "
-"todos, while `-ttd` would display notes and todos."
+"for to-dos, or `nt` for notes and to-dos (eg. `-tt` would display only the "
+"to-dos, while `-ttd` would display notes and to-dos."
 msgstr ""
 
 msgid "Either \"text\" or \"json\""
@@ -361,7 +361,7 @@ msgstr ""
 
 msgid ""
 "Use long list format. Format is ID, NOTE_COUNT (for notebook), DATE, "
-"TODO_CHECKED (for todos), TITLE"
+"TODO_CHECKED (for to-dos), TITLE"
 msgstr ""
 
 msgid "Please select a notebook first."
@@ -376,7 +376,7 @@ msgstr ""
 msgid "Notes can only be created within a notebook."
 msgstr ""
 
-msgid "Creates a new todo."
+msgid "Creates a new to-do."
 msgstr ""
 
 msgid "Moves the notes matching <note> to [notebook]."
@@ -462,12 +462,12 @@ msgstr ""
 
 msgid ""
 "<todo-command> can either be \"toggle\" or \"clear\". Use \"toggle\" to "
-"toggle the given todo between completed and uncompleted state (If the target "
-"is a regular note it will be converted to a todo). Use \"clear\" to convert "
-"the todo back to a regular note."
+"toggle the given to-do between completed and uncompleted state (If the "
+"target is a regular note it will be converted to a to-do). Use \"clear\" to "
+"convert the to-do back to a regular note."
 msgstr ""
 
-msgid "Marks a todo as non-completed."
+msgid "Marks a to-do as non-completed."
 msgstr ""
 
 msgid ""
@@ -699,7 +699,7 @@ msgstr ""
 msgid "%s: %d notes"
 msgstr ""
 
-msgid "New todo"
+msgid "New to-do"
 msgstr ""
 
 msgid "New note"
