Translation and rebuilt website

--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -27,6 +27,9 @@ msgstr ""
 msgid "Exit command line mode"
 msgstr ""
 
+msgid "Edit the selected note"
+msgstr ""
+
 msgid "Cancel the current command."
 msgstr ""
 
